@@ -12,7 +12,7 @@ Some images used (at leas temporarily) were done by NASA. They are released into
 2. Filename: "test2.jpg". Source: Haiti Deforestation - http://en.wikipedia.org/wiki/File:Haiti_deforestation.jpg
 3. Filename: "test3.jpg". Source: http://lostock-school-camp.wikispaces.com/aerial+photo (Creative Commons license)
 
-Unit statuses (might be good to split them ito two lists):
+Unit statuses (might be good to split them into two lists):
 1. READY
 2. MOVING
 3. MOVING FAST
