@@ -4,6 +4,7 @@
 #include <QObject>
 #include <QString>
 #include <QMap>
+#include <QSize>
 #include "ccferror.h"
 #include "ccfconfigparser.h"
 
@@ -11,8 +12,8 @@ class CcfConfig : public QObject, public CcfError
 {
     Q_OBJECT
     Q_PROPERTY(QString uiMode READ uiMode)
-    Q_PROPERTY(int configWindowWidth READ configWindowWidth)
-    Q_PROPERTY(int configWindowHeight READ configWindowHeight)
+    Q_PROPERTY(int configWindowWidth READ configWindowWidth NOTIFY configWindowWidthChanged)
+    Q_PROPERTY(int configWindowHeight READ configWindowHeight NOTIFY configWindowHeightChanged)
 
 public:
     explicit CcfConfig(const QString &configFilePath, QObject *parent = 0);
@@ -23,6 +24,13 @@ public:
     QString uiMode();
     int configWindowWidth();
     int configWindowHeight();
+
+public slots:
+    void windowResized(QSize newSize);
+
+signals:
+    void configWindowWidthChanged();
+    void configWindowHeightChanged();
 
 private:
     int findQtKey(QChar character);
